Extract json source into separate module